--- a/src/components/HeroComponents.astro
+++ b/src/components/HeroComponents.astro
@@ -1,8 +1,7 @@
 ---
 import banner1 from "../assets/images/banner/Banner-1.png";
 import banner2 from "../assets/images/banner/Banner-2.png";
-import banner3 from "../assets/images/banner/Banner-3.png";
-import banner4 from "../assets/images/banner/Banner-4.png";
+import banner3 from "../assets/images/banner/Banner-3.jpg";
 import service1 from "/src/assets/images/darkfighter.png";
 import service2 from "/src/assets/images/tandem.png";
 import service3 from "/src/assets/images/color.png";
