--- a/src/pages/blogs/index.astro
+++ b/src/pages/blogs/index.astro
@@ -95,7 +95,7 @@ const structuredData = {
   <div class="max-w-7xl mx-auto px-5 relative z-10">
     <div class="text-center">
       <!-- Badge -->    
-      <h1 class="text-6xl font-bold mb-6 text-white">
+      <h1 class="text-4xl md:text-6xl font-bold mb-6 text-white">
         Our <span class="relative inline-block">
           <span class="relative z-10">Blogs</span>
           <span class="absolute bottom-0 left-0 w-full h-3 bg-[#f0cb35] opacity-70 rounded"></span>
