--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -65,7 +65,7 @@ const { title, description, keywords ,structuredData} = Astro.props;
             title ??
             "Best Hikvision Distributor in Dubai, UAE ",
           type: "Website",
-          image: "https://dubai-hikvision.com/logo.svg",
+          image: "https://dubai-hikvision.com/assets/logo.svg",
           url: "https://dubai-hikvision.com/",
         },
         optional: {
@@ -86,7 +86,7 @@ const { title, description, keywords ,structuredData} = Astro.props;
         title:
           title ??
           "Best Hikvision Distributor in Dubai, UAE | Dubai Hikvision",
-        image: "https://dubai-hikvision.com/logo.svg",
+        image: "https://dubai-hikvision.com/assets/logo.svg",
         imageAlt: "Dubai Hikvision",
         description:
           description ??
@@ -102,7 +102,7 @@ const { title, description, keywords ,structuredData} = Astro.props;
           },
           { name: "robots", content: "index, follow" },
           { name: "language", content: "English" },
-          { name: "Author", content: "Digiimpact" },
+          { name: "Author", content: "Dubai Hikvision" },
          
         ],
       }}
