--- a/src/pages/blogs/[...slug].astro
+++ b/src/pages/blogs/[...slug].astro
@@ -44,7 +44,7 @@ const structuredData = {
     "name": "Dubai Hikvision",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://dubai-hikvision.com/logo.svg"
+      "url": "https://dubai-hikvision.com/assets/logo.svg"
     }
   },
   "mainEntityOfPage": {
