--- a/src/pages/blogs/index.astro
+++ b/src/pages/blogs/index.astro
@@ -13,7 +13,6 @@ const structuredData = {
   "@context": "https://schema.org",
   "@type": "Blog",
   "name": "Our Blogs",
-  "title": "Our Blogs | Dubai Hikvision",
   "description": "Welcome to our blog section, where knowledge meets inspiration. Explore insightful articles, expert tips, and the latest trends in our field.",
   "url": "https://dubai-hikvision.com/blogs",
   "mainEntity": {
@@ -34,7 +33,7 @@ const structuredData = {
     "name": "Dubai Hikvision",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://dubai-hikvision.com/logo.svg"
+      "url": "https://dubai-hikvision.com/assets/logo.svg"
     }
   },
   "breadcrumb": {
@@ -58,13 +57,11 @@ const structuredData = {
         }
       }
     ]
-  }
+  },
 };
 ---
 
-
 <link rel="stylesheet" href="https://unpkg.com/swiper@11/swiper-bundle.min.css" media="print" onload="this.media='all'" />
-
 
 <script src="https://unpkg.com/swiper@11/swiper-bundle.min.js" defer></script>
 
@@ -209,12 +206,12 @@ const structuredData = {
     border-color: #32869f !important;
   }
 
-  .swiper-slide.swiper-slide-active>.swiper-slide-active\:text-[#32869f] {
+  .swiper-slide.swiper-slide-active > .swiper-slide-active\:text-\[\#32869f\] {
     --tw-text-opacity: 1;
     color: #32869f;
   }
 
-  .swiper-slide.swiper-slide-active>.flex .grid .swiper-slide-active\:text-[#32869f] {
+  .swiper-slide.swiper-slide-active > .flex .grid .swiper-slide-active\:text-\[\#32869f\] {
     --tw-text-opacity: 1;
     color: #32869f;
   }
