--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -15,7 +15,7 @@ const structuredData = {
     "@type": "Organization",
     "name": "Dubai Hikvision",
     "title": "Contact us for more information hikvision dubai,uae",
-    "logo": "https://dubai-hikvision.com/logo.svg", 
+    "logo": "https://dubai-hikvision.com/assets/logo.svg",  
     "contactPoint": [
       {
         "@type": "ContactPoint",
