--- a/src/pages/productsnew/index.astro
+++ b/src/pages/productsnew/index.astro
@@ -127,7 +127,7 @@ const structuredData = {
     "@type": "Organization",
     name: "Dubai Hikvision",
     url: "https://dubai-hikvision.com",
-    logo: "https://dubai-hikvision.com/logo.svg",
+    logo: "https://dubai-hikvision.com/assets/logo.svg",
   },
   address: {
     "@type": "PostalAddress",
