--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 // import logo from "../assets/images/logolovosis.svg";
-import logo from "../../src/assets/logo.svg"
+import logo from "../assets/logo.svg"
 
 const currentPath = Astro.url.pathname;
 ---
