--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -60,7 +60,7 @@ const structuredData = {
         "name": "Dubai Hikvision",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://dubai-hikvision.com/logo.svg"
+          "url": "https://dubai-hikvision.com/assets/logo.svg"
         }
       }
     }
@@ -70,7 +70,7 @@ const structuredData = {
     "name": "Dubai Hikvision",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://dubai-hikvision.com/logo.svg"
+      "url": "https://dubai-hikvision.com/assets/logo.svg"
     }
   },
   "breadcrumb": {
