Mobile banners are added

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -75,7 +75,7 @@ const { title, description, keywords ,structuredData} = Astro.props;
           
 					siteName: "Dubai Hikvision",
 					locale: "en_US",
-        video: "https://youtube.com/shorts/obweq6yMfBE"
+          video: "https://www.youtube.com/embed/MGjX7jfqMZA?si=Dnuo2vATsgzT2JOA"
 				},
       }}
       ,
