--- a/src/pages/productsnew/index.astro
+++ b/src/pages/productsnew/index.astro
@@ -4,7 +4,7 @@ import networkimg from "/src/assets/images/products/network.png";
 import nvrimg from "/src/assets/images/products/nvr.png";
 import ptzimg from "/src/assets/images/products/ptz.png";
 import explosionimg from "/src/assets/images/products/explosion.png";
-import banner1 from "/src/assets/images/banner/Banner1.png";
+import banner1 from "/src/assets/images/banner/Productbanner.webp";
 import { SEO } from "astro-seo";
 
 // SEO metadata
