--- a/src/pages/ptzcamera/[...slug].astro
+++ b/src/pages/ptzcamera/[...slug].astro
@@ -24,7 +24,7 @@ const structuredData = {
   category: product.data.category,
   image: product.data.imgCard.src,
   title: `${product.data.title} | Dubai Hikvision`,
-  keywords: `${product.data.title}, ${product.data.subTitle}, ${product.data.category}, Hikvision Dubai, Hikvision Security Products, Hikvision Network Cameras, Hikvision NVR Systems, Hikvision PTZ Cameras, Hikvision CCTV Cameras, Hikvision Webcams, Hikvision Dubai Distributor, Hikvision Security Solutions, Hikvision Surveillance Equipment, Hikvision Dubai Security Systems, Hikvision Distributor Dubai, hikvision cctv in dubai, hikvision cctv in uae, hikvision cctv camera price in dubai, hikvision ip camera, hikvision dvr 4 channel, hikvision dvr 8 channel, hikvision wifi camera, hikvision ptz camera`,
+  // keywords: `${product.data.title}, ${product.data.subTitle}, ${product.data.category}, Hikvision Dubai, Hikvision Security Products, Hikvision Network Cameras, Hikvision NVR Systems, Hikvision PTZ Cameras, Hikvision CCTV Cameras, Hikvision Webcams, Hikvision Dubai Distributor, Hikvision Security Solutions, Hikvision Surveillance Equipment, Hikvision Dubai Security Systems, Hikvision Distributor Dubai, hikvision cctv in dubai, hikvision cctv in uae, hikvision cctv camera price in dubai, hikvision ip camera, hikvision dvr 4 channel, hikvision dvr 8 channel, hikvision wifi camera, hikvision ptz camera`,
   openGraph: {
     basic: {
       title: product.data.title,
