--- a/src/components/HeroComponents.astro
+++ b/src/components/HeroComponents.astro
@@ -1,7 +1,10 @@
 ---
-import banner1 from "../assets/images/banner/Banner-1.png";
-import banner2 from "../assets/images/banner/Banner-2.png";
-import banner3 from "../assets/images/banner/Banner-3.jpg";
+import banner1 from "../assets/images/banner/Banner-1.webp";
+import banner2 from "../assets/images/banner/Banner-2.webp";
+import banner3 from "../assets/images/banner/Banner-3.webp";
+import banner4 from "../assets/images/banner/mobile1.webp";
+import banner5 from "../assets/images/banner/mobile2.webp";
+import banner6 from "../assets/images/banner/mobile3.webp";
 import service1 from "/src/assets/images/darkfighter.png";
 import service2 from "/src/assets/images/tandem.png";
 import service3 from "/src/assets/images/color.png";
@@ -24,19 +27,25 @@ const slides = [
   {
     id: 1,
     imgMain: banner1,
+    imgMobile: banner4,
     title: "Hero 1",
   },
   {
     id: 2,
     imgMain: banner2,
+    imgMobile: banner5,
     title: "Hero 2",  
   },
   {
     id: 3,
     imgMain: banner3,
+    imgMobile: banner6,
     title: "Hero 3",
   },
 ];
+
+
+
 
 const services = [
   {
@@ -166,9 +175,14 @@ const schemaData = {
           data-key={slide.id}
         >
           <img
+            src={slide.imgMobile.src}
+            alt={slide.title}
+            class="w-full h-full object-cover md:hidden"
+          />
+          <img
             src={slide.imgMain.src}
             alt={slide.title}
-            class="w-full h-full object-cover"
+            class="w-full h-full object-cover hidden md:block"
           />
         </div>
       ))
