--- a/src/pages/networkcamera/index.astro
+++ b/src/pages/networkcamera/index.astro
@@ -143,7 +143,7 @@ const structuredData = {
     "@type": "Organization",
     name: "Dubai Hikvision",  
     url: "https://dubai-hikvision.com",
-    logo: "https://dubai-hikvision.com/assets/logo.svg",
+    logo: "https://dubai-hikvision.com/logo.svg",
   },
 };
 
