--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 // import logo from "../assets/images/logolovosis.svg";
-import logo from "../assets/logo.svg"
+import logoPath from "../../public/logo.svg"
 
 const currentPath = Astro.url.pathname;
 ---
@@ -16,7 +16,7 @@ const currentPath = Astro.url.pathname;
   >
     <Image
       class="mx-auto w-32 h-10"
-      src={logo}
+      src={logoPath}
       alt="Dubai Hikvision"
       loading={"eager"}
     />
@@ -164,7 +164,7 @@ const currentPath = Astro.url.pathname;
     >
       <Image
         class="w-28 h-8 object-contain"
-        src={logo}
+        src={logoPath}
         alt="Dubai Hikvision"
         loading={"eager"}
       />
