--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -65,7 +65,7 @@ const { title, description, keywords ,structuredData} = Astro.props;
             title ??
             "Best Hikvision Distributor in Dubai, UAE ",
           type: "Website",
-          image: "https://dubai-hikvision.com/assets/logo.svg",
+          image: "https://dubai-hikvision.com/logo.svg",
           url: "https://dubai-hikvision.com/",
         },
         optional: {
@@ -86,7 +86,7 @@ const { title, description, keywords ,structuredData} = Astro.props;
         title:
           title ??
           "Best Hikvision Distributor in Dubai, UAE | Dubai Hikvision",
-        image: "https://dubai-hikvision.com/assets/logo.svg",
+        image: "https://dubai-hikvision.com/logo.svg",
         imageAlt: "Dubai Hikvision",
         description:
           description ??
@@ -109,12 +109,7 @@ const { title, description, keywords ,structuredData} = Astro.props;
     />
   </head>
   <body class="bg-white">
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MSCJSN6S"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
     <Navbar />
-    <!-- <div class="mx-auto max-w-screen-2xl px-4 sm:px-6 lg:px-8"> -->
     <div class="mx-auto max-width-8xl px-0 sm:px-0 lg:px-0">
       <main>
         <slot />
