--- a/src/pages/blogs/index.astro
+++ b/src/pages/blogs/index.astro
@@ -33,7 +33,7 @@ const structuredData = {
     "name": "Dubai Hikvision",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://dubai-hikvision.com/assets/logo.svg"
+      "url": "https://dubai-hikvision.com/logo.svg"
     }
   },
   "breadcrumb": {
